# pediatria_neonatal

./: .flake8  .gitignore  LICENSE  README.md  README_IOS.md  pyproject.toml
src/pediatria_neonatal/: __main__.py  app.py
src/pediatria_neonatal/application/: __init__.py  context.py  navigator.py  session_store.py  state.py
src/pediatria_neonatal/clinical/: __init__.py  evaluacion.py
src/pediatria_neonatal/controllers/: __init__.py  corrected_age_calculator_controller.py  edad_corregida_controller.py  historial_controller.py  medicion_controller.py  paciente_controller.py  resultado_controller.py
src/pediatria_neonatal/data/: lms_repository.py
src/pediatria_neonatal/data/who_2006/: README.md  __init__.py  bmi_for_age.csv  head_circumference_for_age.csv  length_height_for_age.csv  weight_for_age.csv  weight_for_height.csv  weight_for_length.csv
src/pediatria_neonatal/domain/: __init__.py  exceptions.py  lms.py  models.py  paciente.py
src/pediatria_neonatal/presentation/: __init__.py  oms_chart.py  resultados.py
src/pediatria_neonatal/resources/: icons.py
src/pediatria_neonatal/resources/icons/: README.md
src/pediatria_neonatal/services/: __init__.py  antropometria.py  neonatal.py  oms2006.py  zscore.py
src/pediatria_neonatal/views/: __init__.py  components.py  corrected_age_calculator_view.py  edad_corregida_view.py  historial_view.py  medicion_view.py  oms_chart.py  paciente_view.py  resultado_view.py
tests/: test_antropometria.py  test_context.py  test_corrected_age_calculator.py  test_imports.py  test_neonatal.py  test_oms2006.py  test_oms_chart.py  test_paciente.py  test_resultados_presentacion.py
